# fireaim

./: CMakeLists.txt  README.md  app.json  package.json
.github/workflows/: build.yml
android/: build.gradle  gradle.properties  gradlew  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/fireaim/: FireaimRenderer.java  GameGLSurfaceView.java  GameGLSurfaceViewManager.java  MainActivity.java  MainApplication.java
include/: constants.h  game.h  player.h  projectile.h  renderer.h  target.h
src/: App.js  game.cpp  main.cpp  player.cpp  projectile.cpp  renderer.cpp  target.cpp
test/: test_game.cpp
